# aoc-2017

./: .gitignore  .gitmodules  README.md  aoc-2017.cabal  aoc2017.cabal  justfile  stdout
app/: Main.hs
src/: Day.hs  Days.hs  Main.hs
src/Days/: Day01.hs  Day02.hs
test/: Spec.hs
