cabal-version:      2.4
name:               aoc2017
version:            0.1.0.0
build-type:         Simple

executable aoc2017
    main-is:         Main.hs
    hs-source-dirs:  src
    build-depends:   
        base, 
        aoc2017, 
        containers
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:  Days
    build-depends:    base
    default-language: Haskell2010
