cabal-version:      2.4
name:               aoc2017
version:            0.1.0.0
build-type:         Simple

executable aoc2017
    main-is:         Main.hs
    hs-source-dirs:  src
    other-modules:
        Day
        Days
        Days.Day01
    build-depends:   
        base >= 4.20 && < 4.21,
        containers >= 0.7 && < 0.8
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:  Days
    other-modules:
        Day
        Days.Day01
    build-depends:
        base >= 4.20 && < 4.21,
        containers >= 0.7 && < 0.8
    default-language: Haskell2010
